--- a/about/me/index.qmd
+++ b/about/me/index.qmd
@@ -192,18 +192,9 @@ In addition to my research, I'm involved in a community-based air quality projec
 
 # CV
 
-Feel free to check out my CV below! ![](https://partyparrotasaservice.vercel.app/api/partyparrot?overlay=&overlayWidth=20&overlayHeight=20&overlayOffsetX=0&overlayOffsetY=0){width=25px height=25px style="vertical-align:middle;"}
+You can either view or [download](https://github.com/YONGHUNI/blog/blob/main/about/me/data/CV_Yonghun_Suh.pdf?raw=true){target="_blank"} my CV here! ![](https://partyparrotasaservice.vercel.app/api/partyparrot?overlay=&overlayWidth=20&overlayHeight=20&overlayOffsetX=0&overlayOffsetY=0){width=25px height=25px style="vertical-align:middle;"}
 
 
-
-<object 
-  data="./data/CV_Yonghun_Suh.pdf" 
-  type="application/pdf" 
-  width="100%" 
-  height="1000px">
-  If the PDF is not visible on mobile, 
-  <a href="https://github.com/YONGHUNI/blog/blob/main/about/me/data/CV_Yonghun_Suh.pdf?raw=true">click here</a>.
-</object>
 
 
 
