--- a/about/me/index.qmd
+++ b/about/me/index.qmd
@@ -1,8 +1,6 @@
 ---
 title: "Yonghun Suh"
 subtitle: "*Enabling HPC in Geography*"
-resources:
-  - ./data/CV_Yonghun_Suh.pdf
 about:
   id: hero-heading
   image: https://avatars.githubusercontent.com/u/62800337?v=4
@@ -192,7 +190,7 @@ In addition to my research, I'm involved in a community-based air quality projec
 
 # CV
 
-You can either view or [download](https://github.com/YONGHUNI/blog/blob/main/about/me/data/CV_Yonghun_Suh.pdf?raw=true) my CV here! [](https://partyparrotasaservice.vercel.app/api/partyparrot?overlay=&overlayWidth=20&overlayHeight=20&overlayOffsetX=0&overlayOffsetY=0){width=25px height=25px style="vertical-align:middle;"}
+You can either view or [download](https://github.com/YONGHUNI/blog/blob/main/about/me/data/CV_Yonghun_Suh.pdf?raw=true){target="_blank"} my CV here! <img src="./data/partyparrot.gif" alt="" width="25px" height="25px" style="vertical-align: middle;" />
 
 
 ![](./data/CV_Yonghun_Suh.pdf){width="100%" height="1000px"}
